# pandarus_remote

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGES.md  CHANGES.txt  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  README.Docker.md  README.md  README.rst  compose.yaml  environment.yml  pandarus_remote.yml  pyproject.toml  setup.cfg  setup.py
.github/: pandarus_remote.yml  python_test_env.yml
.github/workflows/: python-package-deploy.yml  python-test.yml
docs/: conf.py  index.rst  modules.rst  pandarus_remote.rst
pandarus_remote/: __init__.py  app.py  bin.py  db.py  errors.py  filesystem.py  helpers.py  models.py  routes.py  tasks.py  utils.py  version.py
scripts/: get_files_sha256.py  rq_entry_point.sh  web_entry_point.sh
tests/: __init__.py  conftest.py
tests/data/: sha256.json  vector.geojson  vector1.geojson  vector2.geojson
tests/integration/: test_job_life_cycle.py  test_routes.py  utils.py
tests/unit/: test_app.py  test_routes.py  test_utils.py
tests/unit/helpers/: __init__.py  test_database_helper.py  test_io_helper.py  test_redis_helper.py  test_task_helper.py
